:sparkles: Ref. #549 -- added 'bestandsomvang' to API response
