# src/swagger2.0.json
@@ -1919,6 +1919,12 @@
                     "format": "uri",
                     "readOnly": true
                 },
+                "bestandsomvang": {
+                    "title": "Bestandsomvang",
+                    "type": "integer",
+                    "readOnly": true,
+                    "minimum": 0
+                },
                 "link": {
                     "title": "Link",
                     "description": "De URL waarmee de inhoud van het INFORMATIEOBJECT op te vragen is.",
@@ -2555,6 +2561,12 @@
                     "title": "Inhoud",
                     "type": "string",
                     "format": "bytes"
+                },
+                "bestandsomvang": {
+                    "title": "Bestandsomvang",
+                    "type": "integer",
+                    "readOnly": true,
+                    "minimum": 0
                 },
                 "link": {
                     "title": "Link",
